syntax = "proto3";

package proto;
option go_package = "grpc_etcd/server/proto/pb";

message SearchReq {
  string name = 1;
}

message SearchResp {
  string respName = 1;
}

service SearchService {
  rpc Search(SearchReq) returns(SearchResp) {}
}